tenzir/integration/data/reference/ir/test_one_let_with_unknown_variable/step_00.ref
error: unknown variable
 --> <input>:1:12
  |
1 | let $foo = $bar
  |            ^^^^ 
  |